[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "snowflakes"
authors = [
    {name = "Roy T. Smart", email = "roytsmart@gmail.com"},
]
description = "A Numba-accelerated Python library for simulating snow crystal growth"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "numba",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]
doc = [
    "pytest",
    "matplotlib",
    "graphviz",
    "sphinx-autodoc-typehints",
    "pydata-sphinx-theme",
    "ipykernel",
    "jupyter-sphinx",
    "sphinx-favicon",
]

[project.urls]
Homepage = "https://github.com/byrdie/snowflakes"

[tool.setuptools_scm]
